--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,4 +26,16 @@
 
     <link rel="author" href="humans.txt" />
 
+    <html prefix="og: http://ogp.me/ns#">
+    <head>
+        <title>Carl Einarsson</title>
+        <meta property="og:title" content="Carl Einarsson" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://cccarle.github.io" />
+        <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+        ...
+    </head>
+    ...
+    </html>
+
 </header>
