--- a/css/main.scss
+++ b/css/main.scss
@@ -26,6 +26,32 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 
+.padded-multiline {
+    line-height: 1.3;
+    padding: 2px 0;
+    border-left: 20px solid #f2fffa;
+    width: 400px;
+    margin: 20px auto;
+}
+.padded-multiline h1 {
+    background-color: #f2fffa;
+    padding: 4px 0;
+    color: #000000;
+    display: inline;
+    margin: 0;
+}
+.padded-multiline h1 strong {
+    position: relative;
+    left: -10px;
+}
+.padded-multiline p {
+    background-color: #f2fffa;
+    padding: 4px 0;
+    color: #000000;
+    display: inline;
+    margin: 0;
+}
+
     body {
         background-image: url(../img/23H.jpg);
         background-size: cover;
