--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,9 @@
  */
 #disqus_thread {
     background-color: white;
-    opacity: 1;
+    opacity: 50;
+    padding: 25px;
+    margin: 25px;
 }
 
 html {
