--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
         <meta property="og:title" content="Carl Einarsson" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://cccarle.github.io" />
-        <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+        <meta property="og:image" content="http://digitalsynopsis.com/wp-content/uploads/2014/03/how-to-create-a-website-feature-image.jpg" />
 
     </head>
 
