--- a/css/main.scss
+++ b/css/main.scss
@@ -52,11 +52,23 @@ $on-laptop:        800px;
     margin: 0;
 }
 
-    body {
-        background-image: url(../img/23H.jpg);
-        background-size: cover;
-    }
 
+body {
+
+    background:
+        linear-gradient(
+                rgba(0, 0, 0, 0.3),
+                rgba(0, 0, 0, 0.3)
+        ),
+        url(../img/23H.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #6c6c6c;
+    font-weight: 900;
+    -webkit-background-size: cover;
+}
 
 footer {
     background-color: white;
