--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 
     <link rel="author" href="humans.txt" />
 
-    <html prefix="og: http://ogp.me/ns#">
+     prefix="og: http://ogp.me/ns#">
     <head>
         <title>Carl Einarsson</title>
         <meta property="og:title" content="Carl Einarsson" />
@@ -36,6 +36,4 @@
 
     </head>
 
-    </html>
 
-</header>
