--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,5 @@
 
     <link rel="author" href="humans.txt" />
 
-     prefix="og: http://ogp.me/ns#">
-    <head>
-        <title>Carl Einarsson</title>
-        <meta property="og:title" content="Carl Einarsson" />
-        <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://cccarle.github.io" />
-        <meta property="og:image" content="http://digitalsynopsis.com/wp-content/uploads/2014/03/how-to-create-a-website-feature-image.jpg" />
 
-    </head>
-
-
+</header>
