--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,9 @@
-
+<html prefix="og: https://cccarle.github.io/">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property=og:site_name:
     <meta property="og:title" content="Carl Einarsson" />
     <meta property="og:type" content="Carl Einarssons Website" />
     <meta property="og:url" content="https://cccarle.github.io/" />
@@ -18,5 +19,6 @@
 
 </head>
 
+</html>
 
 
