--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<html prefix="og: https://cccarle.github.io/">
+<html prefix="og: Carl Ejnarssons Web/">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
