--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<html>
 <header class="site-header">
 
   <div class="wrapper">
@@ -25,6 +26,17 @@
   </div>
 
     <link rel="author" href="humans.txt" />
-
-
+    <html prefix="og: http://ogp.me/ns#">
 </header>
+
+    <head>
+        <title>The Rock (1996)</title>
+        <meta property="og:title" content="The Rock" />
+        <meta property="og:type" content="video.movie" />
+        <meta property="og:url" content="http://www.imdb.com/title/tt0117500/" />
+        <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+
+    </head>
+
+    </html>
+
