--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta property=og:site_Carl:/>
-    <meta property="og:title" content="Carl Einarsson" />
-    <meta property="og:type" content="Carl Einarssons Website" />
-    <meta property="og:url" content="https://cccarle.github.io/" />
-    <meta property="og:image" content="http://digitalsynopsis.com/wp-content/uploads/2014/03/how-to-create-a-website-feature-image.jpg" />
+
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <meta property=og:cccarle:/>
+    <meta property="og:title" content="Carl Einarsson" />
+    <meta property="og:type" content="Carl Einarssons Website" />
+    <meta property="og:url" content="https://cccarle.github.io/" />
+    <meta property="og:image" content="https://cccarle.github.io/img/imgs.jpg" />
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
 
