--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,15 +8,13 @@
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
     <meta property=og:cccarle:/>
     <meta property="og:title" content="Carl Einarsson" />
     <meta property="og:type" content="Carl Einarssons Website" />
     <meta property="og:url" content="https://cccarle.github.io/" />
-    <meta property="og:image" content="https://cccarle.github.io/img/imgs.jpg" />
-
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-
-
+    <meta property="og:image" content="img/23H.jpg" />
 
 
 </head>
