--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,13 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <title>Carl Ejnarssons WebPage</title>
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="http://www.imdb.com/title/tt0117500/" />
+    <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
 
-    <meta property=og:cccarle:/>
-    <meta property="og:title" content="Carl Einarsson" />
-    <meta property="og:type" content="Carl Einarssons Website" />
-    <meta property="og:url" content="https://cccarle.github.io/" />
-    <meta property="og:image" content="img/23H.jpg" />
+
 
 
 </head>
