--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,12 +7,11 @@
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <title>Carl Ejnarssons WebPage</title>
+    <title>The Rock (1996)</title>
     <meta property="og:title" content="The Rock" />
     <meta property="og:type" content="video.movie" />
     <meta property="og:url" content="http://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="http://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="https://peltonenandreas.github.io/img/354.jpg" />
+
 </head>
 </html>
-
-
