--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,15 +3,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Carl Ejnarsson</title>
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <title>The Rock (1996)</title>
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
-    <meta property="og:url" content="http://www.imdb.com/title/tt0117500/" />
-    <meta property="og:image" content="https://peltonenandreas.github.io/img/354.jpg" />
+    <meta property="og:title" content="Carl Ejnarsson" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:url" content="https://cccarle.github.io/" />
+    <meta property="og:image" content="/img/imgs.jpg" />
 
 </head>
 </html>
