--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,17 +1,16 @@
-<html prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Carl Ejnarsson</title>
+
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="description" content="{{ site.description }}">
+
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <meta property="og:title" content="Carl Ejnarsson" />
-    <meta property="og:type" content="Website" />
-    <meta property="og:url" content="https://cccarle.github.io/" />
-    <meta property="og:image" content="/img/imgs.jpg" />
 
+    <meta property="og:title" content="Rosa Ekström" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rjosih.github.io/" />
+    <meta property="og:image" content="/pics/hej.jpg" />
 </head>
-</html>
