--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
-    <meta property="og:title" content="Rosa Ekström" />
+    <meta property="og:title" content="Carl Einarsson" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://rjosih.github.io/" />
-    <meta property="og:image" content="/pics/hej.jpg" />
+    <meta property="og:url" content="https://cccarle.github.io/" />
+    <meta property="og:image" content="/img/imgs.jpg" />
 </head>
