--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
     <meta property="og:title" content="Carl Einarsson" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cccarle.github.io/" />
-    <meta property="og:image" content="http://digitalsynopsis.com/wp-content/uploads/2014/03/how-to-create-a-website-feature-image.jpg" />
+    <meta property="og:image" content="/img/imgs.jpg" />
 
 </head>
